--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Handjet:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500&display=swap');
 
 * {
   margin: 0;
@@ -6,10 +7,19 @@
   text-decoration: none;
   font-family: 'Handjet', sans-serif;
   user-select: none;
-  color: red;
   white-space: nowrap;
 }
 
 body {
   background: black;
+}
+
+.content {
+  background: repeating-linear-gradient(
+  45deg,
+  #606dbc,
+  #606dbc 10px,
+  #465298 10px,
+  #465298 20px
+);
 }
